2011-06-30  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/46787
	* tree-data-ref.c (dr_address_invariant_p): Remove.
	(find_data_references_in_stmt): Invariant accesses are ok now.
	* tree-vect-stmts.c (vectorizable_load): Handle invariant
	loads.
	* tree-vect-data-refs.c (vect_analyze_data_ref_access): Allow
	invariant loads.

	* gcc.dg/vect/vect-121.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175704 138bc75d-0d04-0410-961f-82ee72b054a4